Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/knowrob_knowledge_base/build.make.091.log.stderr
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp: In function 'void perceptCallback(knowrob_semantic_map_msgs::SemMapObject)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:16:26: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(0, 0)) + ","+ std::to_string(m(0, 1)) + ","+ std::to_string(m(0, 2)) + ","+ std::to_string(m(0, 3)) + ","
                          ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:16:57: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(0, 0)) + ","+ std::to_string(m(0, 1)) + ","+ std::to_string(m(0, 2)) + ","+ std::to_string(m(0, 3)) + ","
                                                         ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:16:88: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(0, 0)) + ","+ std::to_string(m(0, 1)) + ","+ std::to_string(m(0, 2)) + ","+ std::to_string(m(0, 3)) + ","
                                                                                        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:16:119: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(0, 0)) + ","+ std::to_string(m(0, 1)) + ","+ std::to_string(m(0, 2)) + ","+ std::to_string(m(0, 3)) + ","
                                                                                                                       ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:17:26: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(1, 0)) + ","+ std::to_string(m(1, 1)) + ","+ std::to_string(m(1, 2)) + ","+ std::to_string(m(1, 3)) + ","
                          ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:17:57: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(1, 0)) + ","+ std::to_string(m(1, 1)) + ","+ std::to_string(m(1, 2)) + ","+ std::to_string(m(1, 3)) + ","
                                                         ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:17:88: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(1, 0)) + ","+ std::to_string(m(1, 1)) + ","+ std::to_string(m(1, 2)) + ","+ std::to_string(m(1, 3)) + ","
                                                                                        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:17:119: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(1, 0)) + ","+ std::to_string(m(1, 1)) + ","+ std::to_string(m(1, 2)) + ","+ std::to_string(m(1, 3)) + ","
                                                                                                                       ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:18:26: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(2, 0)) + ","+ std::to_string(m(2, 1)) + ","+ std::to_string(m(2, 2)) + ","+ std::to_string(m(2, 3)) + ","
                          ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:18:57: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(2, 0)) + ","+ std::to_string(m(2, 1)) + ","+ std::to_string(m(2, 2)) + ","+ std::to_string(m(2, 3)) + ","
                                                         ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:18:88: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(2, 0)) + ","+ std::to_string(m(2, 1)) + ","+ std::to_string(m(2, 2)) + ","+ std::to_string(m(2, 3)) + ","
                                                                                        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:18:119: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(2, 0)) + ","+ std::to_string(m(2, 1)) + ","+ std::to_string(m(2, 2)) + ","+ std::to_string(m(2, 3)) + ","
                                                                                                                       ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:19:26: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(3, 0)) + ","+ std::to_string(m(3, 1)) + ","+ std::to_string(m(3, 2)) + ","+ std::to_string(m(3, 3)) +
                          ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:19:57: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(3, 0)) + ","+ std::to_string(m(3, 1)) + ","+ std::to_string(m(3, 2)) + ","+ std::to_string(m(3, 3)) +
                                                         ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:19:88: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(3, 0)) + ","+ std::to_string(m(3, 1)) + ","+ std::to_string(m(3, 2)) + ","+ std::to_string(m(3, 3)) +
                                                                                        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:19:119: error: 'to_string' is not a member of 'std'
                        + std::to_string(m(3, 0)) + ","+ std::to_string(m(3, 1)) + ","+ std::to_string(m(3, 2)) + ","+ std::to_string(m(3, 3)) +
                                                                                                                       ^
make[2]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/src/listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/all] Error 2
make: *** [all] Error 2
